# myException

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
include/myExcept/: myException.hpp
src/: myException.cpp
